--- a/main.html
+++ b/main.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://images.ctfassets.net/wp1lcwdav1p1/3cIZo9bfq14o3zy3JsPG7r/95779d9ecb6ba5eeb6005a9482bcc3d0/GettyImages-1209452765.jpg?w=1500&h=680&q=60&fit=fill&f=faces&fm=jpg&fl=progressive&auto=format%2Ccompress&dpr=1&w=1000&h=" alt="Image of Darab">
+	<h2><a href="https://www.linkedin.com/in/darab-khan-07b494259/">Darab Khan</a></h2>
+	<section>
+		<div class="skills">
+			<ul>
+				<li>Hard Working</li>
+				<li></li>
+			</ul>
+		</div>
+		<div classs="projects">
+			<ul>
+				<li></li>
+			</ul>
+		</div>
+	</section>
+	<script type="text/javascript" src="./script.js">
 </script>
-
 </body>
 
 </html>
