--- a/main.html
+++ b/main.html
@@ -10,17 +10,19 @@
 		<div class="skills">
 			<ul>
 				<li>Hard Working</li>
-				<li></li>
+				<li>Time Management</li>
+<!-- 				<li>Excellent Communication Skills</li> -->
+				<li>Problem Solver</li>
 			</ul>
 		</div>
 		<div classs="projects">
 			<ul>
-				<li></li>
+				<li>Calculator</li>
+				<li>Basic Website</li>
 			</ul>
 		</div>
 	</section>
 	<script type="text/javascript" src="./script.js">
 </script>
 </body>
-
 </html>
