--- a/main.html
+++ b/main.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 	<img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://images.ctfassets.net/wp1lcwdav1p1/3cIZo9bfq14o3zy3JsPG7r/95779d9ecb6ba5eeb6005a9482bcc3d0/GettyImages-1209452765.jpg?w=1500&h=680&q=60&fit=fill&f=faces&fm=jpg&fl=progressive&auto=format%2Ccompress&dpr=1&w=1000&h=" alt="Image of Darab">
-	<h2><a href="https://www.linkedin.com/in/darab-khan-07b494259/">Darab Khan</a></h2>
+	<h2>Darab Khan</h2>
+	<a href="https://www.linkedin.com/in/darab-khan-07b494259/"></a>
+	<label for="linkedin">LinkedIn</label><br>
 	<section>
 		<div class="skills">
 			<ul>
