--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 	<a href="https://www.linkedin.com/in/darab-khan-07b494259/"></a>
 	<label for="linkedin">LinkedIn</label><br>
 	<section>
-		<div class="skills">
+		<div id="skills">
 			<ul>
 				<li>Hard Working</li>
 				<li>Time Management</li>
 				<li>Problem Solver</li>
 			</ul>
 		</div>
-		<div classs="projects">
+		<div id="projects">
 			<ul>
 				<li>Calculator</li>
 				<li>Basic Website</li>
