--- a/main.html
+++ b/main.html
@@ -8,22 +8,18 @@
 	<h2>Darab Khan</h2>
 	<a href="https://www.linkedin.com/in/darab-khan-07b494259/">LinkedIn</a>
 	<label for="linkedin"></label><br>
-	<section>
-		<div id="skills">
+	<section id="skills">
 			<ul>
 				<li>Hard Working</li>
 				<li>Time Management</li>
 				<li>Problem Solver</li>
 			</ul>
-		</div>
 	</section>
-	<section>
-		<div id="projects">
+	<section id="projects">
 			<ul>
 				<li>Calculator</li>
 				<li>Basic Website</li>
 			</ul>
-		</div>
 	</section>
 	<script type="text/javascript" src="./script.js">
 </script>
