--- a/main.html
+++ b/main.html
@@ -6,8 +6,9 @@
 <body>
 	<img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://images.ctfassets.net/wp1lcwdav1p1/3cIZo9bfq14o3zy3JsPG7r/95779d9ecb6ba5eeb6005a9482bcc3d0/GettyImages-1209452765.jpg?w=1500&h=680&q=60&fit=fill&f=faces&fm=jpg&fl=progressive&auto=format%2Ccompress&dpr=1&w=1000&h=" alt="Image of Darab">
 	<h2>Darab Khan</h2>
-	<a href="https://www.linkedin.com/in/darab-khan-07b494259/">LinkedIn</a>
-	<label for="linkedin"></label><br>
+	<a href="https://www.linkedin.com/in/darab-khan-07b494259/">
+		<label for="linkedin">LinkedIn</label><br>
+	</a>
 	<section id="skills">
 			<ul>
 				<li>Hard Working</li>
