--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://images.ctfassets.net/wp1lcwdav1p1/3cIZo9bfq14o3zy3JsPG7r/95779d9ecb6ba5eeb6005a9482bcc3d0/GettyImages-1209452765.jpg?w=1500&h=680&q=60&fit=fill&f=faces&fm=jpg&fl=progressive&auto=format%2Ccompress&dpr=1&w=1000&h=" alt="Image of Darab">
+	<img src="https://53.fs1.hubspotusercontent-na1.net/hub/53/hubfs/Software%20developer%20vs%20software%20engineer.jpg?width=893&height=600&name=Software%20developer%20vs%20software%20engineer.jpg" alt="Image of Darab">
 	<h2>Darab Khan</h2>
 	<a href="https://www.linkedin.com/in/darab-khan-07b494259/">
 		<label for="linkedin">LinkedIn</label><br>
