--- a/main.html
+++ b/main.html
@@ -4,8 +4,8 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<img src="https://53.fs1.hubspotusercontent-na1.net/hub/53/hubfs/Software%20developer%20vs%20software%20engineer.jpg?width=893&height=600&name=Software%20developer%20vs%20software%20engineer.jpg" alt="Image of Darab">
-	<h2>Darab Khan</h2>
+	<img src="https://53.fs1.hubspotusercontent-na1.net/hub/53/hubfs/Software%20developer%20vs%20software%20engineer.jpg?width=893&height=600&name=Software%20developer%20vs%20software%20engineer.jpg">
+	<h1>Darab Khan</h1>
 	<a href="https://www.linkedin.com/in/darab-khan-07b494259/">
 		<label for="linkedin">LinkedIn</label><br>
 	</a>
